# droidian-fpd

./: CMakeLists.txt  droidian-fpd.pro  droidian-fpd.service  org.droidian.fingerprint.conf
debian/: changelog  control  droidian-fpd.droidian-fpd.service  droidian-fpd.install  rules
src/: droidian-fpd.cpp  fpdcommunity.cpp  fpdcommunity.h
src/bridge/: bridge.h
